...
    title: String = "Ошибка!",
    modifier: Modifier = Modifier,
    onDismissClick: () -> Unit,
) {
    AlertDialog(
        modifier = modifier
            .testTag("dialog"),
        onDismissRequest = onDismissClick,
        confirmButton = {},
        icon = {
            Box(
                modifier = Modifier
                    .clip(CircleShape)
...
