...
@Composable
fun CustomGreenButton(
    text: String,
    isSignInScreen: Boolean = false,
    isNextButton: Boolean = false,
    enabled: Boolean = true,
    tag: String = "btn",
    modifier: Modifier = Modifier,
    onClick: () -> Unit,
) {
    val brush = Brush.linearGradient(
        listOf(
            _228F7D,
...
